# flac-downloader

./: .cache  .env.example  .gitignore  GETTING_STARTED.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.py  setup.sh
.github/workflows/: python-quality.yml
docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md
src/: __init__.py  main.py
src/config/: __init__.py  constants.py  settings.py
src/core/: __init__.py  exceptions.py  logging.py  models.py
src/database/: __init__.py  manager.py
src/services/: __init__.py  downloader.py  metadata.py  spotify_service.py  tidal_api.py
src/utils/: __init__.py  csv_logger.py  error_cache.py  file_manager.py  text.py
streamlit_app/: app.py
tests/: conftest.py  test_cover_download.py  test_error_cache.py  test_utils.py
